--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 title: AdvaithBot Help
-favicon: https://advaithbot.com/files/logo.png
+image: https://advaithbot.com/files/logo.png
 url: https://help.advaithbot.com
