update domain and use widgetbot

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 title: AdvaithBot Help
-image: https://advaithbot.com/files/logo.png
-url: https://help.advaithbot.com
+image: https://advaithbot.xyz/files/logo.png
+url: https://help.advaithbot.xyz
